# PodCut

./: .gitignore  PRD.md  index.html  package-lock.json  package.json  vite.config.ts
.claude/: launch.json  start-dev.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AppIcon.tsx  AudioWorkbench.tsx  ChapterNav.tsx  ErrorBoundary.tsx  ExportPanel.tsx  ProcessingView.tsx  RoughCut.tsx  SetupScreen.tsx  SpeakerAvatar.tsx  TranscriptPanel.tsx  Welcome.tsx  Workspace.tsx
src/lib/: postProcess.ts  projectFile.ts  rss.ts  speakers.ts  utils.ts
src/store/: project.ts
